--- a/css/styles.css
+++ b/css/styles.css
@@ -25,23 +25,19 @@
 }
 
 html {
-  /* font-family: sans-serif; */
-  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 400;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
-  /* scroll-behavior: smooth; */
 }
 
 body {
   margin: 0;
-  /* font-size: 1rem; */
-  font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.45;
   text-align: left;
   background-color: var(--background-color);
   font-family: var(--main-font);
   color: var(--text-color);
-  font-size: 24px;
 }
 
 section {
@@ -49,8 +45,15 @@ section {
 }
 
 p {
+  font-size: 0.83rem;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0.75rem;
+}
+
+@media (min-width:372px) {
+  p {
+    font-size: 1rem;
+  }
 }
 
 ul {
@@ -59,17 +62,29 @@ ul {
 }
 
 li {
+  font-size: 0.75rem;
   list-style: none;
-  padding: 0;
+  margin-left: -1.6rem; 
 }
 
 li::before {
   content: "\25A0 ";
-  font-size: 1.2rem;
+  font-size: 0.75rem;
   color: var(--highlight-color);
   display: inline-block;
-  width: 1em;
-  margin-left: -2.5rem;
+  width: 0.6rem;
+}
+
+@media (min-width:372px) {
+  li {
+    font-size: 0.83rem;
+  }
+}
+
+@media (min-width:576px) {
+  li::before {
+    font-size: 1rem;
+  }
 }
 
 strong {
@@ -83,21 +98,42 @@ svg {
 
 h1,h2,h3,h4,h5,h6 {
   margin-top: 0;
-  margin-bottom: .5rem;
-  font-weight: 500;
+  margin-bottom: .33rem;
   line-height: 1.2;
+  font-weight: 400;
 }
 
 h1 {
-  font-size: 5rem;
+  font-size: 3.33rem;
   line-height: .9;
 }
 
+h2 {
+  font-size: 1.5rem;
+}
+
 h3 {
-  margin-top: 4rem;
-  padding-top: 1rem;
-  font-size: 3rem;
+  margin-top: 2rem;
+  padding-top: 0.66rem;
+  font-size: 1.66rem;
   line-height: 1;
+}
+
+@media (min-width:576px) {
+  h3 {
+    font-size: 2rem;
+    margin-top: 2.5rem;
+  }
+}
+
+h4 {
+  font-size: 1rem;
+}
+
+@media (min-width:372px) {
+  h4 {
+    font-size: 1.15rem;
+  }
 }
 
 a {
@@ -164,62 +200,7 @@ a:hover:after {
   }
 }
 
-@media (min-width:576px) {
-  .container {
-    max-width: 540px;
-  }
-}
-
-@media (min-width:768px) {
-  .container {
-    max-width: 720px;
-  }
-}
-
-@media (min-width:992px) {
-  .container {
-    max-width: 960px;
-  }
-}
-
-@media (min-width:1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-
-div::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
-
-div::-webkit-scrollbar-button {
-  width: 0;
-  height: 0;
-}
-
-div::-webkit-scrollbar-thumb {
-  background: #707070;
-}
-
-div::-webkit-scrollbar-thumb:hover {
-  background: var(--highlight-color);
-}
-
-div::-webkit-scrollbar-thumb:active {
-  background: var(--highlight-color);
-}
-
-div::-webkit-scrollbar-track {
-  background: var(--background-color);
-}
-
-div::-webkit-scrollbar-corner {
-  background: 0 0;
-}
-
 /* TITLE PAGE */
-
 .title {
   width: 100%;
 }
@@ -234,18 +215,30 @@ div::-webkit-scrollbar-corner {
 .arrow-div {
   text-decoration: none;
   position: absolute;
-  bottom: 2rem;
-  height: 2rem;
-  width: 2rem;
+  bottom: 1rem;
+  height: 1.75rem;
+  width: 1.75rem;
 }
 
 .arrow {
-  height: 2rem;
-  width: 2rem;
+  height: 1.75rem;
+  width: 1.75rem;
   animation-duration: 2s;
   animation-iteration-count: infinite;
   transform-origin: bottom;
   fill: var(--text-color);
+}
+
+@media (min-width:576px) {
+  .arrow-div {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
+
+  .arrow {
+    height: 1.5rem;
+    width: 1.5rem;
+  }
 }
 
 .arrow:hover {
@@ -276,23 +269,54 @@ div::-webkit-scrollbar-corner {
 }
 
 /* ABOUT ME */
-
 #aboutme p {
-  font-size: 1.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.33rem;
 }
 
 #aboutme p.no-floor {
   margin-bottom: 0;
 }
 
+#aboutme li::before {
+  width: 0.7rem;
+}
+
 .stack {
   display: grid;
-  font-size: 1.2rem;
+  line-height: 1.5;
   grid-template-columns: repeat(auto-fill,180px);
 }
 
 /* PROJECTS */
+div::-webkit-scrollbar {
+  width: 5px;
+  height: 5px;
+}
+
+div::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+}
+
+div::-webkit-scrollbar-thumb {
+  background: #707070;
+}
+
+div::-webkit-scrollbar-thumb:hover {
+  background: var(--highlight-color);
+}
+
+div::-webkit-scrollbar-thumb:active {
+  background: var(--highlight-color);
+}
+
+div::-webkit-scrollbar-track {
+  background: var(--background-color);
+}
+
+div::-webkit-scrollbar-corner {
+  background: 0 0;
+}
 
 .row {
   display: -ms-flexbox;
@@ -362,13 +386,12 @@ div::-webkit-scrollbar-corner {
 }
 
 .project h4 {
-  font-size: 1.5rem;
   line-height: .9;
   margin-bottom: 6px;
 }
 
 .view-project {
-  font-size: .9rem;
+  font-size: 0.66rem;
   line-height: 1;
   margin-bottom: 4px;
 }
@@ -380,52 +403,50 @@ div::-webkit-scrollbar-corner {
 
 .details p {
   line-height: 1.3;
-  font-size: 1rem;
+  font-size: 0.83rem;
   margin-block-end: 0;
 }
 
 @media (min-width:372px) {
   .details p {
-    font-size: 20px;
-  }
-}
-
-@media (min-width:576px) {
-  .details p {
-    font-size: 16px;
-  }
-}
-
-@media (min-width:992px) {
-  .details p {
-    font-size: 16px;
+    font-size: 0.75rem;
   }
 }
 
 .technologies {
   bottom: 0;
-  font-size: 16px;
   margin-top: 2px;
+  line-height: 1rem;
 }
 
 .technology {
   color: var(--card-background);
   background-color: var(--highlight-color);
   display: inline-block;
-  font-size: .75rem;
+  font-size: 0.6rem;
   font-weight: bolder;
-  padding: 2px 5px;
+  padding: 0px 4px;
   text-decoration: none;
   border-radius: 3px;
   margin: 2px 0;
 }
 
+@media (min-width:372px) {
+  .technology {
+    padding: 1px 4px;
+  }
+}
+
 /* CERTIFICATIONS */
 
 #certifications li {
-  font-size: 1.5rem;
+  font-size: 1rem;
   line-height: 1;
   margin-bottom: .4em;
+}
+
+#certifications li::before {
+  width: 0.5rem;
 }
 
 #certifications a {
@@ -433,14 +454,14 @@ div::-webkit-scrollbar-corner {
 }
 
 .cert-tech {
-  font-size: 1rem;
+  font-size: 0.75rem;
   vertical-align: middle;
 }
 
 /* FOOTER */
 
 #footer {
-  margin-top: 4rem;
+  margin-top: 2.5rem;
 }
 
 /* MODAL */
@@ -496,9 +517,7 @@ video {
 
 .modal__container {
   background-color: var(--background-color);
-  /* padding: 30px; */
   padding: 15px;
-  /* max-width: 500px; */
   max-width: 95vw;
   max-height: 100vh;
   border-radius: 4px;
@@ -515,9 +534,6 @@ video {
 .modal__title {
   margin-top: 0;
   margin-bottom: 0;
-  /* font-weight: 600;
-  font-size: 1.25rem;
-  line-height: 1.25; */
   box-sizing: border-box;
 }
 
@@ -590,5 +606,3 @@ video {
 .micromodal-slide .modal__overlay {
   will-change: transform;
 }
-
-/* MODAL TESTING */
