--- a/src/styles/sections/index.css
+++ b/src/styles/sections/index.css
@@ -4,7 +4,7 @@
 @import "aboutme/_style.css";
 @import "aboutme/_stack.css";
 
-@import "projects/_projectBox.css";
+@import "projects/_projectBoxes.css";
 
 @import "certifications/_certList.css";
 
