made JS modular with class syntax, improved mobile formatting, added portfolio to projects

--- a/src/styles/base/_utilities.css
+++ b/src/styles/base/_utilities.css
@@ -5,3 +5,11 @@
 .xSmallPaddingBottom {
   padding-bottom: 0.5rem !important;
 }
+
+.xSmallPaddingTop {
+  padding-top: 0.5rem !important;
+}
+
+.smallPaddingTop {
+  padding-top: 0.75rem !important;
+}
