--- a/src/styles/base/_global.css
+++ b/src/styles/base/_global.css
@@ -27,7 +27,11 @@ body {
 
 section {
   display: block;
-  margin-top: 2em;
+  margin-top: 1.5em;
+
+  @mixin atMedium {
+    margin-top: 2em;
+  }
 
   &:first-child {
     margin-top: 0;
@@ -95,7 +99,6 @@ h2 {
 }
 
 h3 {
-  padding-top: 0.66rem;
   font-size: 1.66rem;
   line-height: 1;
 
