--- a/src/styles/sections/projects/_projectBoxes.css
+++ b/src/styles/sections/projects/_projectBoxes.css
@@ -1,8 +1,13 @@
 .projectBoxes {
   display: flex;
   flex-wrap: wrap;
+  margin-top: -10px;
   margin-right: calc(-1 * var(--container-lr-padding));
   margin-left: calc(-1 * var(--container-lr-padding));
+
+  @mixin atMedium {
+    margin-bottom: calc(-1 * var(--container-lr-padding));
+  }
 }
 
 .projectBoxes__box {
