--- a/src/styles/sections/projects/_projectBoxes.css
+++ b/src/styles/sections/projects/_projectBoxes.css
@@ -56,6 +56,9 @@
   font-size: 0.66rem;
   line-height: 1;
   margin-bottom: 4px;
+  & a {
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  }
 }
 
 .projectBoxes__details {
@@ -92,6 +95,7 @@
   text-decoration: none;
   border-radius: 3px;
   margin: 2px 0;
+  text-shadow: 1px 1px 2px rgba(198, 227, 255, 0.3);
 
   @mixin atXSmall {
     padding: 1px 4px;
